fix(icons): avoid iconizing digits

--- a/test/fixtures/icon-example.html
+++ b/test/fixtures/icon-example.html
@@ -4,4 +4,6 @@
 <p>:: smile <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg>:<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg>::<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg></p>
 <pre><code class="language-javascript">console.log('this is in a :code: block');
 </code></pre>
-<p><code>this is inline :code:</code></p></body></html>
+<p><code>this is inline :code:</code></p>
+<p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-rocket"><use href="/icons/rocket.svg"></use></svg> is an icon at the beginning of the line, and here's one at the end: <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-heart"><use href="/icons/heart.svg"></use></svg></p>
+<p><code>Oh, and 09:00:00 is a time code.</p></body></html>
