fix: improve language for accepted embeds and data embeds
BREAKING CHANGE: EMBED_WHITELIST renamed to EMBED_ALLOWLIST; DATA_EMBED_WHITELIST renamed to DATA_EMBED_ALLOWLIST

--- a/test/fixtures/embeds.html
+++ b/test/fixtures/embeds.html
@@ -45,8 +45,8 @@
   <p>is an embed, but <a
       href="https://www.youtube.com/watch?v=KOxbO0EI4MA">https://www.youtube.com/watch?v=KOxbO0EI4MA</a> is just a link.
   </p>
-  <h1 id="whitelisting">Whitelisting</h1>
-  <p>All embed hostnames must be whitelisted. Therefore, the following are not embeds:</p>
+  <h1 id="allowing-urls">Allowing URLs</h1>
+  <p>All embed hostnames must be allowed. Therefore, the following are not embeds:</p>
   <p><code>video: https://www.example.com/embed/2Xc9gXyf2G4</code></p>
   <p><a href="https://www.example.com/watch?v=KOxbO0EI4MA" title="Audi R8"><img
         src="http://img.youtube.com/vi/KOxbO0EI4MA/0.jpg" alt="Audi R8"></a></p>
