--- a/test/fixtures/icon-example.html
+++ b/test/fixtures/icon-example.html
@@ -1,10 +1,11 @@
-<html><head></head><body><h1 id="the-helix-pipeline-supports-icons-now">The <strong>Helix</strong> <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-pipeline"><use href="/icons/pipeline.svg"></use></svg> supports icons now</h1>
-<p>This <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tada"><use href="/icons/tada.svg"></use></svg> will render as an icon. <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-thumbsup"><use href="/icons/thumbsup.svg"></use></svg></p>
-<p>I said: this is cool. There are smiles :) - even <strong>big <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smiles"><use href="/icons/smiles.svg"></use></svg></strong> and <a href="http://www.example.com/"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-foo"><use href="/icons/foo.svg"></use></svg></a></p>
-<p>:: smile <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg>:<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg>::<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-smile"><use href="/icons/smile.svg"></use></svg></p>
+<html><head></head><body><h1 id="the-helix-pipeline-supports-icons-now">The <strong>Helix</strong> <img class="icon icon-pipeline" src="icons/pipeline.svg" alt="pipeline icon"> supports icons now</h1>
+<p>This <img class="icon icon-tada" src="icons/tada.svg" alt="tada icon"> will render as an icon. <img class="icon icon-thumbsup" src="icons/thumbsup.svg" alt="thumbsup icon"></p>
+<p>This <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tada"><use href="/icons.svg#tada"></use></svg> will also render as an icon, but is part of an icon collection.</p>
+<p>I said: this is cool. There are smiles :) - even <strong>big <img class="icon icon-smiles" src="icons/smiles.svg" alt="smiles icon"></strong> and <a href="http://www.example.com/"><img class="icon icon-foo" src="icons/foo.svg" alt="foo icon"></a></p>
+<p>:: smile <img class="icon icon-smile" src="icons/smile.svg" alt="smile icon"><img class="icon icon-smile" src="icons/smile.svg" alt="smile icon">:<img class="icon icon-smile" src="icons/smile.svg" alt="smile icon">::<img class="icon icon-smile" src="icons/smile.svg" alt="smile icon"></p>
 <pre><code class="language-javascript">console.log('this is in a :code: block');
 </code></pre>
 <p><code>this is inline :code:</code></p>
-<p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-rocket"><use href="/icons/rocket.svg"></use></svg> is an icon at the beginning of the line, and here's one at the end: <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-heart-0"><use href="/icons/heart-0.svg"></use></svg></p>
+<p><img class="icon icon-rocket" src="icons/rocket.svg" alt="rocket icon"> is an icon at the beginning of the line, and here's one at the end: <img class="icon icon-heart-0" src="icons/heart-0.svg" alt="heart-0 icon"></p>
 <p>Oh, and 09:00:00 is a time code.</p>
 <p>No icon here</p></body></html>
