fix(data): keep runtime for data-embed and fix tests

--- a/test/fixtures/embeds.html
+++ b/test/fixtures/embeds.html
@@ -3,7 +3,7 @@
   <h2 id="gatsby-style-embeds">Gatsby-Style-Embeds</h2>
   <p>
     <esi:include
-      src="https://adobeioruntime.net/api/v1/web/helix/helix-services/embed@v1/https://www.youtube.com/embed/2Xc9gXyf2G4">
+      src="https://helix-pages.anywhere.run/helix-services/embed@v1/https://www.youtube.com/embed/2Xc9gXyf2G4">
     </esi:include>
     <esi:remove><code>video: https://www.youtube.com/embed/2Xc9gXyf2G4</code></esi:remove>
   </p>
@@ -12,7 +12,7 @@
   <p><code>video: http foo bar</code> looks interesting, but doesn’t work either.</p>
   <h2 id="link--image-style-embeds">Link + Image-Style Embeds</h2>
   <esi:include
-    src="https://adobeioruntime.net/api/v1/web/helix/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
+    src="https://helix-pages.anywhere.run/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
   </esi:include>
   <esi:remove>
     <p><a href="https://www.youtube.com/watch?v=KOxbO0EI4MA" title="Audi R8"><img
@@ -22,7 +22,7 @@
     <img src="http://img.youtube.com/vi/KOxbO0EI4MA/0.jpg" alt="Audi R8">is just an image.</p>
   <h2 id="image-style-embeds">Image-Style Embeds</h2>
   <esi:include
-    src="https://adobeioruntime.net/api/v1/web/helix/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
+    src="https://helix-pages.anywhere.run/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
   </esi:include>
   <esi:remove>
     <p><img src="https://www.youtube.com/watch?v=KOxbO0EI4MA" alt=""></p>
@@ -37,7 +37,7 @@
   <p>is on a paragraph of its own.</p>
   <h2 id="ia-writer-style-embeds">IA Writer-Style Embeds</h2>
   <esi:include
-    src="https://adobeioruntime.net/api/v1/web/helix/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
+    src="https://helix-pages.anywhere.run/helix-services/embed@v1/https://www.youtube.com/watch?v=KOxbO0EI4MA">
   </esi:include>
   <esi:remove>
     <p><a href="https://www.youtube.com/watch?v=KOxbO0EI4MA">https://www.youtube.com/watch?v=KOxbO0EI4MA</a></p>
