fix: respect image hashes with dimensions

--- a/test/fixtures/image-rewritten-example.html
+++ b/test/fixtures/image-rewritten-example.html
@@ -3,4 +3,5 @@
 <p>This is a blob image:</p>
 <p><img src="./media_dccc13d784576fa3f0b3e06fb0ea705c49b8085.jpg"></p>
 <p>This is a blob image with type indication:</p>
-<p><img src="./media_dccc13d784576fa3f0b3e06fb0ea705c49b8085.png"></p></body>
+<p><img src="./media_dccc13d784576fa3f0b3e06fb0ea705c49b8085.png"></p>
+<p><img src="./media_dccc13d784576fa3f0b3e06fb0ea705c49b8085.gif"></p></body>
